# LLShader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
demos/: CMakeLists.txt
demos/common/: camera.cpp  camera.hpp  game_object.hpp  model_instance.hpp  model_prototype.hpp  rotate_mixin.hpp  shader_type.hpp
demos/obj2mesh/: mesh_demo.cpp  mesh_demo.hpp  readme.md
demos/obj2mesh/shaders/: scene.frag  scene.vert
demos/pbr/: pbr_demo.cpp  pbr_demo.hpp  readme.md
demos/pbr/shaders/: pbr.frag  pbr.vert
demos/shadowmap/: readme.md  shadow_demo.cpp  shadow_demo.hpp
demos/shadowmap/shaders/: cube.vert  dir_light_shadowmap.vert  scene.frag  scene.vert
engine/: matrix.cpp  matrix.hpp
io/: input_manager.cpp  input_manager.hpp
log/: log.hpp
render/: render_base.hpp  render_manager.cpp  render_manager.hpp  vk_context.cpp  vk_context.hpp  window_manager.cpp  window_manager.hpp
util/: assets_helper.cpp  assets_helper.hpp  math_wrap.hpp  memory_ext.hpp  observer.hpp  shader_compiler_helper.cpp  shader_compiler_helper.hpp  vk_debug_helper.cpp  vk_debug_helper.hpp
